<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#7249BC"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtgrados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"

        android:layout_marginTop="92dp"

        android:layout_marginBottom="12dp"
        android:text="@string/txtgrados"
        android:textColor="@color/white"
        android:textSize="55dp" />

    <TextView
        android:id="@+id/txciudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtgrados"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/txtciudad"
        android:textColor="#F8F3F3"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtestado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txciudad"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:text="@string/txtnublado"
        android:textColor="#009688"
        android:textSize="25sp" />
</RelativeLayout>